fix photo overview being too big (why did it work before???????)

--- a/frontend/src/Photos/Overview.scss
+++ b/frontend/src/Photos/Overview.scss
@@ -33,7 +33,8 @@
     }
 }
 
-.operationsOverlay #photoOverlayContainer {
+.operationsOverlay,
+#photoOverlayContainer {
     width: 100%;
     height: 100%;
     align-items: center;
